--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,48 @@ body {
     border-radius: 5px;
     box-shadow: 0px 15px 15px rgba(112, 112, 112, 0.2);
 }
+/* End of first section */
+
+
+
+/* Second section */
+
+.second-section {
+    background-color: #FFAA00;
+}
+.second-section-block {
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+}
+.delivery-man-img-block {
+    max-width: 800px;
+}
+.delivery-man-img {
+    width: 100%;
+}
+.delivery-title-block {
+    max-width: 436px;
+    width: 100%;
+    margin-bottom: 63.5px;
+}
+.delivery-title {
+    font-family: var(--avenger-font);
+    font-size: 40px;
+    font-weight: 400;
+    color: #fff;
+    line-height: 60px;
+}
+.delivery-subtitle-block {
+    max-width: 450px;
+    width: 100%;
+}
+.delivery-subtitle {
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+}
+/* End of second section */
