--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,7 @@
 @media (max-width: 1500px) {
+
+    /* Header */
+
     .header-content {
         margin: 0;
     }
@@ -14,8 +17,27 @@
     .heading {
         font-size: 24px;
     }
+    .header-container {
+        height: 900px;
+    }
+    
+
+    /* First section */
+
+    .first-section {
+        margin-top: 100px;
+    }
+    .first-sec-title {
+        font-size: 40px;
+    }
+    .first-sec-subtitle {
+        font-size: 18px;
+    }
 }
 @media (max-width: 1220px) {
+
+    /* Header */
+
     .nav-ul {
         flex-direction: column;
         align-items: flex-end;
@@ -37,8 +59,27 @@
     .header-content {
         padding-left: 50px;
     }
+    .header-container {
+        height: 700px;
+    }
+
+    
+    /* First section */
+
+    .first-section {
+        margin-top: 80px;
+    }
+    .first-sec-title {
+        font-size: 34px;
+    }
+    .first-sec-subtitle {
+        font-size: 17px;
+    }
 }
 @media (max-width: 1000px) {
+
+    /* Header */
+
     .title-content {
         margin-top: 34px;
     }
@@ -66,8 +107,30 @@
         padding-top: 20px;
         margin-right: 15px;
     }
+    .header-container {
+        height: 600px;
+    }
+
+    
+    /* First section */
+
+    .first-section {
+        margin-top: 60px;
+    }
+    .first-sec-title {
+        font-size: 30px;
+    }
+    .first-sec-subtitle {
+        font-size: 16px;
+    }
+    .food-container {
+        margin-bottom: 140px;
+    }
 }
 @media (max-width: 768px) {
+
+    /* Header */
+
     .title-content {
         margin-top: 22px;
     }
@@ -91,8 +154,38 @@
         width: 100%;
         height: 50px;
     }
+    .header-container {
+        height: 430px;
+    }
+
+    
+    /* First section */
+
+    .first-section {
+        margin-top: 45px;
+    }
+    .first-sec-title {
+        font-size: 28px;
+    }
+    .first-sec-subtitle {
+        font-size: 15px;
+        margin-top: 30px;
+        margin-bottom: 58px;
+    }
+    .food-container {
+        flex-wrap: wrap;
+    }
+    .food-block {
+        width: 33.333%;
+    }
+    .food-container {
+        margin-bottom: 100px;
+    }
 }
 @media (max-width: 550px) {
+
+    /* Header */
+
     .heading-block {
         display: none;
     }
@@ -108,8 +201,33 @@
     .middle-block {
         width: 39%;
     }
+    .header-container {
+        height: 300px;
+    }
+
+    /* First section */
+
+    .first-sec-title {
+        font-size: 26px;
+    }
+    .first-sec-subtitle {
+        font-size: 14px;
+    }
+    .first-sec-subtitle {
+        margin-bottom: 40px;
+        margin-top: 28px;
+    }
+    .food-block {
+        width: 45%;
+    }
+    .food-container {
+        margin-bottom: 75px;
+    }
 }
 @media (max-width: 420px) {
+
+    /* Header */
+
     .burger-bar {
         padding-top: 8px;
     }
@@ -124,9 +242,42 @@
     .order-btn-text {
         font-size: 14px;
     }
+
+    /* First section */
+
+    .first-section {
+        margin-top: 0;
+    }
 }
 @media (max-width: 380px) {
+
+    /* Header */
+
     .burger-bar {
         font-size: 30px;
+    }
+    .header-container {
+        height: 240px;
+    }
+
+
+    /* First section */
+    .first-sec-title {
+        font-size: 24px;
+    }
+    .first-sec-subtitle-block {
+        font-size: 13px;
+    }
+    .food-block {
+        width: 70%;
+    }
+    .food-container {
+        justify-content: center;
+    }
+    .first-sec-subtitle {
+        margin-bottom: 0;
+    }
+    .food-container {
+        margin-bottom: 20px;
     }
 }
